--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "src/app/(main)/_layout.jsx", "src/app/(auth)/_layout.jsx", "src/app/_layout.jsx"  ]
 }
